[gd_scene load_steps=26 format=3 uid="uid://dqar6hfwx56ed"]

[ext_resource type="Script" path="res://scripts/ranged_enemy.gd" id="1_g14h6"]
[ext_resource type="Texture2D" uid="uid://cutk8x3kifwpm" path="res://assets/sprites/player/heart.png" id="2_ld06c"]
[ext_resource type="Texture2D" uid="uid://cjh5a1ff7vve7" path="res://assets/sprites/player_old/attack_old.png" id="5_0yra6"]
[ext_resource type="Texture2D" uid="uid://cg8i4g1se77yd" path="res://assets/sprites/player_old/jump_old.png" id="5_lcar1"]
[ext_resource type="Texture2D" uid="uid://ctrmlynlhvhuc" path="res://assets/sprites/player_old/idle_old.png" id="6_c1xes"]
[ext_resource type="Texture2D" uid="uid://cwxyx8x3qvvuc" path="res://assets/sprites/player_old/run_old.png" id="7_dnt4x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kslro"]
atlas = ExtResource("2_ld06c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4e07"]
atlas = ExtResource("2_ld06c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm1v2"]
atlas = ExtResource("2_ld06c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_djhwt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kslro")
}],
"loop": true,
"name": &"heart_full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4e07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm1v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4e07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm1v2")
}],
"loop": false,
"name": &"heart_hit",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_te7bf"]
atlas = ExtResource("5_0yra6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_210o3"]
atlas = ExtResource("5_0yra6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8qeu"]
atlas = ExtResource("5_0yra6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tl8k"]
atlas = ExtResource("5_0yra6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3mk4"]
atlas = ExtResource("5_lcar1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2hbk"]
atlas = ExtResource("6_c1xes")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxnbl"]
atlas = ExtResource("6_c1xes")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vlbg"]
atlas = ExtResource("5_lcar1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_528p4"]
atlas = ExtResource("5_lcar1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_umptx"]
atlas = ExtResource("5_lcar1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5ais"]
atlas = ExtResource("7_dnt4x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlo0q"]
atlas = ExtResource("7_dnt4x")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqevd"]
atlas = ExtResource("7_dnt4x")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1lka1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_te7bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_210o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8qeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tl8k")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3mk4")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2hbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxnbl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vlbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_528p4")
}, {
"duration": 1000.0,
"texture": SubResource("AtlasTexture_umptx")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5ais")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlo0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqevd")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v4dux"]
radius = 27.0
height = 123.0

[node name="enemy_ranged" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_g14h6")

[node name="heart_1" type="AnimatedSprite2D" parent="."]
position = Vector2(20, -73)
sprite_frames = SubResource("SpriteFrames_djhwt")
animation = &"heart_hit"

[node name="heart_2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -73)
sprite_frames = SubResource("SpriteFrames_djhwt")
animation = &"heart_hit"

[node name="heart_3" type="AnimatedSprite2D" parent="."]
position = Vector2(-20, -73)
sprite_frames = SubResource("SpriteFrames_djhwt")
animation = &"heart_hit"

[node name="sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_1lka1")
animation = &"attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_v4dux")
debug_color = Color(0.7, 0.233333, 0, 0.419608)

[node name="nav_agent" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="nav_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="shoot_point_point" type="Marker2D" parent="."]
position = Vector2(50, 0)

[node name="shoot_point" type="Marker2D" parent="shoot_point_point"]

[connection signal="timeout" from="nav_timer" to="." method="_on_timer_timeout"]
